--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,16 +3,17 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "inz"
-version = "0.1.0"
-description = ""
+name = "iqbench"
+version = "0.1.1"
+description = "A framework for comprehensive evaluation of Vision Language Models on visual analogy tasks."
 readme = "README.md"
 requires-python = ">=3.10"
 
-license = { file = "LICENSE" }
+license = "Apache-2.0"
+license-files = ["LICENSE"]
 
 authors = [
-  { name = "Karolina Dunal" }
+  { name = "Karolina Dunal" },
   { name = "Zofia Kamińska" }
 ]
 
@@ -40,3 +41,7 @@ package-dir = { "" = "src" }
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[tool.setuptools.package-data]
+"iqbench.technical.configs" = ["*.json"]
+"iqbench.prompts" = ["**/*.txt"]
